# editoggia-v1

./: .gitignore  .gitmodules  .pylintrc  Dockerfile  Pipfile  README.md  config.py  docker-compose.yml  editoggia.py  manage.py  package.json  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  admin.py  assets.py  commands.py  config.py  extensions.py  messages.pot  models.py
app/auth/: __init__.py  forms.py  views.py
app/home/: __init__.py  views.py
app/static/: style.scss
app/story/: __init__.py  admin.py  models.py  views.py
app/templates/: _footer.html  _navbar.html  _navbar.j2  _navbar.jinja2  base.html  base.j2  base.jinja2
app/translations/: messages.pot
app/user/: __init__.py  admin.py  forms.py  models.py  views.py
app/users/: __init__.py  admin.py  forms.py  models.py  views.py
editoggia/: __init__.py  admin.py  assets.py  bleach.py  bleacher.py  commands.py  config.py  database.py  extensions.py  wsgi.py
editoggia/ajax/: __init__.py  autocomplete.py  decorators.py  forms.py  input_validate.py  story.py
editoggia/auth/: __init__.py  forms.py  views.py
editoggia/browse/: __init__.py  forms.py  views.py
editoggia/forms/: __init__.py  fields.py  widgets.py
editoggia/home/: __init__.py  views.py
editoggia/models/: __init__.py  comment.py  comments.py  fandom.py  history.py  mixins.py  (+4 more)
migrations/: env.py
static/: _variables.scss
tests/: conftest.py  helpers.py  test_ajax.py  test_auth.py  test_bleach.py  test_browse.py  test_commands.py  test_home.py  test_models.py  test_moderation.py  test_story.py  test_user.py
(+145 files in other folders)
